src/styles/titlebar.less
.titlebar {
	display: flex;
	width: 100%;
	height: @titlebar-height;
	-webkit-app-region: drag;
	-webkit-animation: animFadeInTop .333s ease-out;

	> h1 {
		position: absolute;
		width: 100%;
		height: 0;
		margin: 0;
		overflow: visible;
		color: @color-text-bright;
		font: normal normal 15px/26px "Open Sans", sans-serif;
		text-align: center;
	}

	> .logo {
		@width: 140px;
		@height: 46px;
		@align-top: 9px;
		@align-left: 3px;

		display: block;
		width: 140px;
		height: 46px;
		margin: ( @app-padding - @align-top ) ( @menu-width - @width - @app-padding + @align-left ) 0 ( @app-padding - @align-left );
		background: url("../img/Twitch_Logo_Purple.png") 0 0 no-repeat;
		background-size: 100%;
		-webkit-app-region: no-drag;
	}

	> .searchbar {
		display: flex;
		position: relative;
		flex-grow: 1;
		height: @titlebar-size;
		margin-top: @app-padding;
		border: 1px solid @searchbar-border-color;
		background: @searchbar-background;
		-webkit-app-region: no-drag;

		> * {
			z-index: 100;
		}

		> button {
			margin: 0;
			padding: 0;
			border: 0 solid @searchbar-border-color;
			background: @searchbar-background;
			line-height: @titlebar-size;
			text-align: center;

			&:hover {
				color: @color-text-dark;
			}
		}

		> .btn-nav {
			width: @searchbar-btn-size;
			border-right-width: 1px;
			color: @color-text-default;
		}

		> .btn-small {
			width: ( @searchbar-btn-size * 4 / 5 );
			color: @color-text-bright;
			font-size: 85%;
		}

		> .btn-context-valid {
			display: none;
		}

		> [type="search"]:valid ~ .btn-context-valid {
			display: block;

			&:hover {
				border-left-width: 1px;
				border-right-width: 1px;
			}
		}

		> .btn-dropdown:hover {
			padding-right: 1px;
			border-left-width: 1px;
		}

		> [type="search"] {
			flex-grow: 1;
			height: ( @titlebar-size - 2px );
			margin: 0;
			padding: @searchbar-padding;
			border: 0;
			color: @color-text-dark;
			font: 14px/20px "Open Sans";

			&::-webkit-input-placeholder {
				color: @color-text-bright;
				font-style: italic;
			}
		}
	}

	> .buttons {
		display: flex;
		flex-direction: row-reverse;
		height: @titlebar-size;
		margin: @app-padding ( @app-padding - 4px ) 0 2.5em;

		> button {
			width: ( @titlebar-size + 6px );
			height: @titlebar-size;
			padding: 0;
			color: @titlebar-btn-color;
			background: @titlebar-btn-background;
			font-size: @titlebar-btn-fontsize;
			line-height: ( @titlebar-size - 2px );
			text-align: center;
			-webkit-app-region: no-drag;

			// adjust wrong line heights for these button icons... blaming font awesome <3
			&.btn-max,
			&.btn-min {
				line-height: ( @titlebar-size + 2px );
			}

			&:hover {
				color: @titlebar-btn-hover-color;
				background: @titlebar-btn-hover-background;
			}
			&:not(:disabled):active {
				color: @titlebar-btn-active-color;
				background: @titlebar-btn-active-background;
			}

			&.btn-close {
				&:hover {
					color: @titlebar-btnclose-hover-color;
					background: @titlebar-btnclose-hover-background;
				}
				&:active {
					color: @titlebar-btnclose-active-color;
					background: @titlebar-btnclose-active-background;
				}
			}

			&.btn-indicator {
				@anim-length: .333s;

				position: relative;
				-webkit-transition: width @anim-length ease-in;

				> .indicator {
					display: block;
					position: absolute;
					right: .2em;
					bottom: .2em;
					padding: 0 .2em;
					border-radius: .2em;
					font: .55em/1.2 "Open Sans";
					color: @color-text-brightest;
					background: @color-twitch-purple;

					opacity: 1;
					z-index: 1;
					// "show" with delay
					-webkit-transition: opacity .001s @anim-length, z-index .001s @anim-length;
				}

				// keep the icon centered during the animation
				&::before {
					display: block;
					padding: 0 .3em;
				}

				&.btn-hidden {
					width: 0;

					// "hide" instantly
					> .indicator {
						opacity: 0;
						z-index: -1;
						-webkit-transition-delay: 0;
					}
				}
			}
		}

		> .spacer {
			width: 1px;
			height: ( @app-padding + @titlebar-size + 4px );
			margin: -@app-padding 7px 0;
			background: @color-text-brighter;
		}

		> .loginname {
			padding: 0 .5em;
			color: @color-text-bright;
			line-height: @titlebar-size;
			-webkit-app-region: no-drag;

			&.nologin {
				display: none;
			}
		}
	}
}

.searchbar-dropdown {
	-webkit-app-region: no-drag;

	position: absolute;
	left: ( 3 * @searchbar-btn-size );
	right: 0;
	top: 100%;
	margin-top: 1px;
	padding: @searchbar-padding;
	outline: 1px solid @color-text-brighter;
	font-size: @searchbar-dropdown-fontsize;
	background: @input-background;
	z-index: 99 !important;
	-webkit-animation: animFadeInTop .333s ease-out;

	&.hidden {
		display: none;
	}

	.wrapper {
		display: flex;
		padding-bottom: 1px;
		line-height: 1.5em;

		> div {
			flex: 1;

			&:first-of-type {
				padding: 1px 0;
			}
		}
	}

	.filters {
		> div:last-of-type {
			display: flex;
			justify-content: flex-end;
			flex: none;
			width: 15em;
		}

		input {
			display: none;
		}

		label {
			.button();
			flex: 1;
		}

		input:checked + label {
			background: @searchbar-filter-background-checked;
		}
	}

	.recent {
		margin-top: @searchbar-padding;
		padding-top: @searchbar-padding;
		border-top: 1px solid mix( @searchbar-background, @searchbar-border-color );

		.clear {
			.button();
			flex: none;

			> i {
				font-size: 1rem;
			}
		}

		ul {
			margin: .25em 0 0;
		}

		li {
			display: flex;
			color: @color-text-bright;
			line-height: 1.3em;
			cursor: pointer;

			&:hover {
				background: @searchbar-filter-background-hover;
			}

			> div {
				overflow: hidden;
				text-overflow: ellipsis;
				white-space: nowrap;
			}

			> .filter {
				width: 4em;
			}

			> .query {
				flex: 1;
			}

			> .date {
				font-size: .85em;
			}
		}
	}


	.button() {
		display: block;
		margin: 0 0 0 @searchbar-padding;
		padding: 0 .25em;
		border: 1px solid @searchbar-border-color;
		background: @searchbar-filter-background;
		line-height: 1.5em;
		font-weight: normal;
		text-align: center;
		cursor: pointer;

		&:hover {
			background: @searchbar-filter-background-hover;
		}
	}
}

